--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -18,7 +18,7 @@ body {
 
 /* common */
 .content {
-  width: 1440px;
+  width: 1170px;
   max-width: 100%;
   margin: 0 auto;
 }
@@ -36,9 +36,22 @@ body {
   font-weight: 600;
   font-style: normal;
 }
+.btn:hover {
+  cursor: pointer;
+}
 
 a {
   text-decoration: none;
+}
+
+.title {
+  color: var(--primary-color);
+  font-family: Sen;
+  font-size: 38px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 48px; /* 117.241% */
+  letter-spacing: -0.76px;
 }
 
 /* header  */
@@ -94,4 +107,184 @@ header.header .nav .active a::before {
   background-color: var(--primary-color);
   left: 0;
   bottom: 0;
+}
+
+/* hero  */
+
+.hero {
+  padding: 50px 0 65px;
+  background-color: #fffcf4;
+}
+
+.hero .img-desc {
+  width: 49%;
+  height: 685px;
+  position: relative;
+}
+
+.hero .img-desc img.img-block {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: block;
+  width: 470px;
+  height: 685px;
+  object-fit: cover;
+
+  border-radius: 20px;
+}
+
+.hero .img-desc .desc-block {
+  position: absolute;
+  left: 300px;
+  bottom: 48px;
+  z-index: 1;
+  background-color: #fff;
+  padding: 24px 58px 24px 24px;
+  border-radius: 12px;
+}
+
+.hero .img-desc .desc-block .desc-row {
+  display: flex;
+  align-items: center;
+  margin-bottom: 16px;
+}
+
+.hero .img-desc .desc-block .icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 14px;
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  background-color: #fff9e8;
+}
+
+.hero .img-desc .desc-block .desc-row:nth-child(2) .icon {
+  background-color: #fcefff;
+}
+
+.hero .img-desc .desc-block .desc-row:nth-child(3) .icon {
+  background-color: #ebeaff;
+}
+
+.hero .img-desc .desc-block .icon img {
+  width: 24px;
+  height: 24px;
+}
+
+.hero .img-desc .desc-block .desc-item p.desc {
+  color: #5f5b53;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 26px; /* 185.714% */
+}
+
+.hero .img-desc .desc-block .desc-item strong {
+  color: #171100;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 30px; /* 166.667% */
+}
+
+.hero .info {
+  width: 51%;
+  position: relative;
+}
+
+.hero .info .container {
+  width: 470px;
+  position: absolute;
+  top: 64px;
+  left: 130px;
+}
+
+.hero .info h1.title {
+  color: #171100;
+  font-family: Sen;
+  font-size: 58px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 68px; /* 117.241% */
+  letter-spacing: -1.16px;
+  margin-bottom: 22px;
+}
+
+.hero .info p.desc {
+  color: #5f5b53;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 30px; /* 166.667% */
+}
+
+.hero .info .row-btn {
+  display: flex;
+  flex-direction: row;
+  margin-top: 38px;
+  margin-bottom: 48px;
+}
+.hero .info .row-btn .btn {
+  padding: 17px 34px;
+  background-color: #ffb900;
+  color: white;
+  border-radius: 32px;
+  font-weight: 600;
+  font-style: normal;
+  font-size: 18px;
+  line-height: 37px;
+}
+
+.hero .info .row.play {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.hero .info .row.play:hover {
+  cursor: pointer;
+}
+
+.hero .info .row.play p.play {
+  color: var(--primary-color);
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 30px; /* 166.667% */
+}
+
+.hero .info .number {
+  margin-top: 8px;
+}
+
+.hero .info .number .row-studen {
+  display: flex;
+  justify-content: center;
+  align-items: end;
+  margin-right: 28px;
+}
+.hero .info .number .row-course {
+  display: flex;
+  justify-content: center;
+  align-items: end;
+}
+
+.hero .info .number .row strong {
+  color: var(--primary-color);
+  font-family: Sen;
+  font-size: 44px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 54px; /* 122.727% */
+  margin-right: 14px;
+}
+
+.hero .info .number .row span {
+  color: #5f5b53;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 30px;
 }
