--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -544,3 +544,82 @@ header.header .nav .active a::before {
   font-weight: 400;
   line-height: 40px; /* 153.846% */
 }
+
+/* feature  */
+
+.features {
+  padding: 200px 0;
+}
+
+.feature-1 {
+  display: flex;
+}
+
+.feature-1 .box-img {
+  width: 48%;
+  height: 438px;
+  display: flex;
+  gap: 30px;
+}
+
+.feature-1 .box-img img.version-1 {
+  width: 270px;
+  height: 405px;
+  object-fit: cover;
+  border-radius: 16px;
+}
+
+.feature-1 .box-img img.version-1:first-child {
+  margin-top: 33px;
+}
+
+.feature-1 .info {
+  width: 52%;
+  height: 438px;
+  padding-left: 130px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.features .info p.desc {
+  margin-top: 16px;
+  color: #5f5b53;
+  line-height: 28px; /* 175% */
+}
+
+.features .info a.btn {
+  margin-top: 32px;
+  display: block;
+  padding: 11px 37px;
+  background-color: var(--secondary-color);
+  border-radius: 26px;
+  line-height: 28px;
+}
+
+/* feature 2 */
+.feature-2 {
+  margin-top: 200px;
+  display: flex;
+}
+
+.feature-2 .info {
+  width: 49%;
+}
+
+.features .info a.btn {
+  display: block;
+}
+
+.feature-2 .box-img {
+  width: 51%;
+}
+
+.feature-2 .box-img img.version-2 {
+  display: block;
+  margin-left: auto;
+  width: 470px;
+  height: 440px;
+  object-fit: cover;
+  border-radius: 20px;
+}
