--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -623,3 +623,124 @@ header.header .nav .active a::before {
   object-fit: cover;
   border-radius: 20px;
 }
+
+/* blog  */
+
+.blog {
+  padding: 96px 0;
+  background-color: #fffcf4;
+}
+
+.blog h2.title {
+  text-align: center;
+}
+
+.blog p.desc {
+  margin-top: 16px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 448px;
+  text-align: center;
+  color: #696262;
+  line-height: 28px; /* 175% */
+}
+
+.blog .box {
+  margin-top: 55px;
+  display: flex;
+  gap: 30px;
+  overflow: hidden;
+}
+
+.blog .box .box-item {
+  flex-shrink: 0;
+  width: calc(33.33% - 20px);
+}
+
+.blog .box-item:hover .info {
+  box-shadow: 0px 16px 32px 0px rgba(0, 0, 0, 0.05);
+}
+
+.blog .box .box-item img {
+  display: block;
+  width: 370px;
+  height: 250px;
+  object-fit: cover;
+  border-radius: 16px 16px 0px 0px;
+}
+
+.blog .box .info {
+  padding: 20px 20px 28px;
+  background-color: #fff;
+  border-bottom-left-radius: 16px;
+  border-bottom-right-radius: 16px;
+}
+
+.blog .box .info p.date {
+  position: relative;
+  display: inline-flex;
+  align-items: center;
+  color: #5f5b53;
+  font-size: 1.4rem;
+  line-height: 26px; /* 185.714% */
+  padding-bottom: 12px;
+}
+
+.blog .box .info p.date::before {
+  content: "";
+  display: inline-block;
+  width: 6px;
+  height: 6px;
+  background-color: var(--secondary-color);
+  border-radius: 50%;
+  margin-right: 4px;
+}
+
+.blog .box .info p.date::after {
+  position: absolute;
+  left: 0;
+  right: -27px;
+  bottom: 0;
+  content: "";
+  display: inline-block;
+  height: 1px;
+  border-radius: 0.5px;
+  background: #e2dfda;
+}
+
+.blog .box p.title a {
+  margin-top: 12px;
+  display: inline-block;
+  font-size: 1.6rem;
+  line-height: 28px; /* 175% */
+}
+
+.blog .box a.btn {
+  display: inline-block;
+  margin-top: 12px;
+  padding: 12px 21px;
+  font-size: 1.4rem;
+  line-height: 26px; /* 185.714% */
+}
+
+.blog .box a.btn:hover {
+  background-color: var(--secondary-color);
+}
+
+.blog .dot {
+  display: flex;
+  justify-content: center;
+  gap: 6px;
+}
+
+.blog .dot-item {
+  margin-top: 38px;
+  width: 6px;
+  height: 6px;
+  background-color: #5f5b53;
+  border-radius: 50%;
+}
+
+.blog .dot-item.active {
+  background-color: var(--secondary-color);
+}
