--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,7 +3,7 @@
 }
 
 :root {
-  --primary-color: #171100;
+  --primary-color: #0d1111;
   --secondary-color: #ffb900;
 }
 
@@ -20,7 +20,7 @@ body {
 
 .content {
   width: 1170px;
-  max-width: 100%;
+  max-width: calc(100% - 140px);
   margin: 0 auto;
 }
 
@@ -161,14 +161,10 @@ header.header .nav .active a::before {
 }
 
 .hero .img-desc img.img-block {
-  position: absolute;
-  top: 0;
-  left: 0;
   display: block;
   width: 470px;
-  height: 685px;
+  height: 100%;
   object-fit: cover;
-
   border-radius: 20px;
 }
 
@@ -235,9 +231,8 @@ header.header .nav .active a::before {
 
 .hero .info .container {
   width: 470px;
-  position: absolute;
-  top: 64px;
-  left: 130px;
+  margin-top: 64px;
+  margin-left: 130px;
 }
 
 .hero .info h1.title {
